<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/self_construct"
        android:id="@+id/connect_button"
        android:onClick="selfConstruct"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/self_message_ON"
        android:id="@+id/send_button_ON"
        android:onClick="selfMessage_ON"
        android:layout_below="@+id/connect_button"
        android:layout_alignLeft="@+id/connect_button"
        android:layout_alignStart="@+id/connect_button" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/self_message_OFF"
        android:id="@+id/send_button_OFF"
        android:onClick="selfMessage_OFF"
        android:layout_below="@+id/send_button_ON"
        android:layout_alignLeft="@+id/connect_button"
        android:layout_alignStart="@+id/connect_button" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/getValuesTemp"
        android:id="@+id/get_buttonTemp"
        android:onClick="get_button_Temp"
        android:layout_below="@+id/send_button_OFF"
        android:layout_alignLeft="@+id/connect_button"
        android:layout_alignStart="@+id/connect_button" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/self_destruct"
        android:id="@+id/disconnect_button"
        android:onClick="selfDestruct"
        android:layout_below="@+id/get_buttonTemp"
        android:layout_alignLeft="@+id/connect_button"
        android:layout_alignStart="@+id/connect_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temp"
        android:id="@+id/temp"
        android:layout_toRightOf="@+id/get_buttonTemp"
        android:layout_toEndOf="@+id/get_buttonTemp"
        android:layout_below="@+id/send_button_OFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Humid"
        android:id="@+id/humid"
        android:layout_toRightOf="@+id/get_buttonTemp"
        android:layout_toEndOf="@+id/get_buttonTemp"
        android:layout_below="@+id/temp" />

</RelativeLayout>
